kong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kong
  template:
    metadata:
      labels:
        app: kong
    spec:
      containers:
        - name: kong
          image: kong:3.6
          ports:
            - containerPort: 8000   # proxy
            - containerPort: 8001   # admin
          volumeMounts:
            - name: kong-config
              mountPath: /kong
      volumes:
        - name: kong-config
          configMap:
            name: kong-config
