k8s-deployment.yaml
# =========================
# POSTGRES
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

# =========================
# MOOD TRACKER
# =========================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mood-tracker-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mood-tracker
  template:
    metadata:
      labels:
        app: mood-tracker
    spec:
      containers:
        - name: mood-tracker
          image: mood-tracker:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          args: ["--spring.profiles.active=k8s"]
---
apiVersion: v1
kind: Service
metadata:
  name: mood-tracker-service
spec:
  type: NodePort
  selector:
    app: mood-tracker
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
