k8s.yaml
# =========================
# POSTGRES
# =========================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432

# =========================
# MOOD-TRACKER
# =========================
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mood-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mood
  template:
    metadata:
      labels:
        app: mood
    spec:
      containers:
        - name: mood-tracker
          image: mood-tracker-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mood-service
spec:
  type: ClusterIP
  selector:
    app: mood
  ports:
    - port: 8080
      targetPort: 8080
