kong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  type: NodePort
  selector:
    app: kong
  ports:
    - name: proxy
      port: 8000
      targetPort: 8000
      nodePort: 30080
